# basic-conan-cmake-gtest-project

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: cmake.yml
app/: CMakeLists.txt
app/include/app/: math.h
app/src/: main.cpp
app/test/: CMakeLists.txt  main.cpp
cmake/: conan.cmake
